# galileo-agents

./: README.md  env.example  pyproject.toml
agents-crewai/: __init__.py
agents-crewai/content/: __init__.py  agents.py  crew.py  prompts.py
agents-crewai/research/: __init__.py  agents.py  crew.py  prompts.py  tools.py
agents-langgraph/calculator/: __init__.py  agent.py  prompt.py  tools.py
agents-langgraph/rag/: __init__.py  agent.py  prompt.py  tools.py
agents-langgraph/weather/: __init__.py  agent.py  prompt.py  tools.py
agents-langgraph/weather/json_trace/: traces_20251210_132912_687502.json  traces_20251210_132912_696798.json  traces_20251210_132912_703511.json  traces_20251210_132912_708264.json  traces_20251210_132913_923172.json  traces_20251210_132913_929166.json  traces_20251210_132913_938313.json
shared/: __init__.py  logger.py  proto.py
